--- a/components/cms/init_blocks/property_carousel.html
+++ b/components/cms/init_blocks/property_carousel.html
@@ -8,7 +8,7 @@
   data-carousel-slides-to-scroll-lg="4"
 >
   <div data-carousel-track class="flex">
-    {{{#array {"field":"List", "schema":{"listing_price": "money", "square_feet": "number", "acres": "number"}, "api": "https://api.clearwaterproperties.com/api/front/properties", "apiField": "data", "apiQuery": "", "apiLimit": 20, "value": []}}}}
+    {{{#array {"field":"List", "schema":[{"field":"listing_price", "type":"money"},{"field":"square_feet", "type":"number"},{"field":"acres", "type":"number"}], "api": "https://api.clearwaterproperties.com/api/front/properties", "apiField": "data", "apiQuery": "", "apiLimit": 20, "value": []}}}}
       <div class="shrink-0 min-w-0 flex-[0_0_100%] lg:flex-[0_0_25%] p-4">
           <div class="{{loading}}">
             <div class="block bg-white shadow-md rounded-lg overflow-hidden animate-pulse">
