--- a/components/cms/init_blocks/hero_carousel.html
+++ b/components/cms/init_blocks/hero_carousel.html
@@ -1,6 +1,6 @@
 <section
     class="relative h-[50dvh] min-h-[260px] w-full bg-cover bg-center"
-    style="background-image: url('{{{#image {"field": "backgroundImage", "value": "https://www.clearwaterproperties.com/image/static/hp-recreational.jpg" }}}}')"
+    style="background-image: url('{{{#image {"field":"backgroundImage","value":"https://www.clearwaterproperties.com/image/static/hp-recreational.jpg","tags":["Background"]}}}}')"
   >
     <!-- Dark overlay -->
     <div class="absolute inset-0 bg-black/40"></div>
@@ -19,7 +19,7 @@
             data-carousel-transition="fade"
           >
             <div data-carousel-track class="flex">
-              {{{#array {"field":"Slides","schema":[{"field": "topHeader", "value" :"text"}, {"field": "middleHeader", "type": "text"}],"value":[{"topHeader":"Lorem ipsum dolor sit amet.", "middleHeader": "Lorem ipsum dolor sit amet."},{"topHeader":"Sit amet lorem.", "middleHeader": "Sit amet lorem."}]}}}}
+              {{{#array {"field":"Slides","schema":[{"field":"topHeader","value":"text"},{"field":"middleHeader","type":"text"}],"value":[{"topHeader":"Lorem ipsum dolor sit amet.","middleHeader":"Lorem ipsum dolor sit amet."},{"topHeader":"Sit amet lorem.","middleHeader":"Sit amet lorem."}]}}}}
                 <div class="shrink-0 min-w-0 flex-[0_0_100%]">
                   <div class="text-center text-white">
                       <p class="text-[0.65rem] md:text-sm tracking-[0.35em] uppercase opacity-80 -ml-3">
