--- a/components/cms/init_blocks/post_content.html
+++ b/components/cms/init_blocks/post_content.html
@@ -1,4 +1,4 @@
-<div class="pa-8 bg-brand font-sans">
+<div class="pa-8 bg-white font-sans">
 {{{#array {"field":"list","schema":[{"field":"name","value":"text"},{"field":"content","value":"richtext"}],"collection":{"path":"post","query":[{"field":"doc_created_at","operator":">","value":0}],"order":[{"field":"doc_created_at","direction":"desc"}]},"queryOptions":[],"limit":1,"value":[]}}}}
     <h1 class="text-sm">
         {{item.content}}
