--- a/components/cms/init_blocks/posts_list.html
+++ b/components/cms/init_blocks/posts_list.html
@@ -7,7 +7,7 @@
       <div class="p-5 flex flex-col flex-1">
         <h2 class="text-lg font-semibold text-gray-800 mb-2 line-clamp-2">{{ item.title }}</h2>
         <div class="text-gray-600 text-sm flex-1 mb-4 line-clamp-3">
-          {{ item.content }}
+          {{ item.blurb }}
         </div>
         <a href="/posts/{{item.name}}" class="inline-block mt-auto self-start text-sm font-medium text-blue-600 hover:text-blue-800 transition-colors duration-150">
           Read More →
