--- a/components/cms/init_blocks/hero_carousel.html
+++ b/components/cms/init_blocks/hero_carousel.html
@@ -1,6 +1,6 @@
 <section
     class="relative h-[50dvh] min-h-[260px] w-full bg-cover bg-center"
-    style="background-image: url('{{{#image {"field":"backgroundImage","value":"https://www.clearwaterproperties.com/image/static/hp-recreational.jpg","tags":["Background"]}}}}')"
+    style="background-image: url('{{{#image {"field":"backgroundImage","value":"https://www.clearwaterproperties.com/image/static/hp-recreational.jpg","tags":["Backgrounds"]}}}}')"
   >
     <!-- Dark overlay -->
     <div class="absolute inset-0 bg-black/40"></div>
