--- a/components/cms/init_blocks/property_detail_header.html
+++ b/components/cms/init_blocks/property_detail_header.html
@@ -1,7 +1,7 @@
 <section
   class="relative h-[50dvh] min-h-[260px] w-full bg-cover bg-center rounded-2xl border border-dashed border-slate-300"
   data-block-type="property-detail-page-header"
-  style="background-image: url('{{{#image {"field":"backgroundImage","value":"https://www.clearwaterproperties.com/image/static/hp-recreational.jpg","tags":["Background"]}}}}')"
+  style="background-image: url('{{{#image {"field":"backgroundImage","value":"https://www.clearwaterproperties.com/image/static/hp-recreational.jpg","tags":["Backgrounds"]}}}}')"
 >
   <!-- Full placeholder overlay badge -->
   <div class="pointer-events-none absolute inset-x-0 top-3 z-30 flex justify-center">
